# Vivalux

./: .gitignore  CMakeLists.txt  MULTIPLATFORM_ARCHITECTURE.md  README.md  SETUP_GUIDE.md  setup_project.py  vcpkg.json
Core/: README.md
IO/: README.md
Projects/: README.md
Projects/JSON Configurations/: example_project.json
UI/: README.md
src/: CMakeLists.txt  main.cpp
src/backends/: imgui_impl_opengl3_loader.h
src/rendering/: Renderer.h  RendererFactory.cpp  RendererFactory.h  RendererOpenGL.cpp  RendererOpenGL.h  RendererVulkan.cpp  RendererVulkan.h  ShaderCompiler.cpp  ShaderCompiler.h  VulkanUtils.h
src/rendering/shaders/: quad.frag  quad.vert
